<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:androidemu="http://androidemu.com/apk/res/android">

	<PreferenceCategory android:title="@string/audio_settings">
		<CheckBoxPreference android:key="soundEnabled"
				android:title="@string/enable_sound"
				android:defaultValue="true"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/video_settings">
		<ListPreference android:key="scalingMode"
				android:title="@string/scaling_mode"
				android:entries="@array/scaling_mode_entries"
				android:entryValues="@array/scaling_mode_entryvalues"
				android:defaultValue="stretch"/>

		<CheckBoxPreference android:key="autoFrameSkip"
				android:title="@string/auto_frame_skip"
				android:defaultValue="true"/>

		<com.androidemu.persistent.SeekBarPreference
				android:key="maxFrameSkips"
				android:title="@string/max_frame_skips"
				android:summary="@string/max_frame_skips_summary"
				androidemu:maxValue="10"
				android:defaultValue="2"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/input_settings">
		<PreferenceScreen android:key="keySettings"
				android:title="@string/key_settings"
				android:summary="@string/key_settings_summary">
			<PreferenceCategory android:key="gameKeyBindings"
					android:title="@string/game_key_bindings"/>

			<PreferenceCategory android:title="@string/shortcut_keys">
				<com.androidemu.persistent.GameKeyPreference
						android:key="quickLoad"
						android:title="@string/quick_load"
						android:defaultValue="0"/>
				<com.androidemu.persistent.GameKeyPreference
						android:key="quickSave"
						android:title="@string/quick_save"
						android:defaultValue="0"/>
			</PreferenceCategory>
		</PreferenceScreen>

		<CheckBoxPreference android:key="enableVirtualKeypad"
				android:title="@string/enable_virtual_keypad"
				android:summary="@string/enable_virtual_keypad_summary"
				android:enabled="@bool/def_hasTouch"
				android:selectable="@bool/def_hasTouch"
				android:defaultValue="@bool/def_useTouch"/>
		
		<PreferenceScreen android:title="@string/vkeypad_settings"
				android:summary="@string/vkeypad_settings_summary"
				android:dependency="enableVirtualKeypad">

			<CheckBoxPreference android:key="enableVibrator"
					android:title="@string/enable_vibrator"
					android:defaultValue="true"/>

			<CheckBoxPreference android:key="dpad4Way"
					android:title="@string/dpad_4way"/>

			<com.androidemu.persistent.SeekBarPreference
					android:key="dpadDeadZone"
					android:title="@string/dpad_deadzone"
					androidemu:maxValue="4"
					android:defaultValue="2"/>

			<PreferenceCategory android:title="@string/two_buttons_press">
				<CheckBoxPreference android:key="inBetweenPress"
						android:title="@string/in_between_press"
						android:summary="@string/in_between_press_summary"/>

				<CheckBoxPreference android:key="pointSizePress"
						android:title="@string/point_size_press"
						android:summary="@string/point_size_press_summary"/>

				<com.androidemu.persistent.SeekBarPreference
						android:key="pointSizePressThreshold"
						android:title="@string/point_size_press_threshold"
						android:dependency="pointSizePress"
						androidemu:maxValue="10"
						android:defaultValue="7"/>
			</PreferenceCategory>

			<PreferenceCategory android:title="@string/appearance">
				<ListPreference android:key="vkeypadSize"
						android:title="@string/vkeypad_size"
						android:entries="@array/vkeypad_size_entries"
						android:entryValues="@array/vkeypad_size_entryvalues"
						android:defaultValue="medium"/>

				<com.androidemu.persistent.SeekBarPreference
						android:key="vkeypadTransparency"
						android:title="@string/vkeypad_transparency"
						android:defaultValue="50"
						androidemu:minValue="0"
						androidemu:maxValue="255"/>
			</PreferenceCategory>
			
			<ListPreference android:key="vkeypadLayout"
					android:title="@string/vkeypad_layout"
					android:entries="@array/vkeypad_layout_entries"
					android:entryValues="@array/vkeypad_layout_entryvalues"
					android:defaultValue="top_bottom"/>

			<com.androidemu.persistent.SeekBarPreference
					android:key="layoutMargin"
					android:title="@string/layout_margin"
					androidemu:maxValue="5"
					android:defaultValue="2"/>
		</PreferenceScreen>

		<CheckBoxPreference android:key="enableTrackball"
				android:title="@string/enable_trackball"
				android:summary="@string/enable_trackball_summary"
				android:enabled="@bool/def_hasTrackball"
				android:selectable="@bool/def_hasTrackball"/>
	</PreferenceCategory>

</PreferenceScreen>
