<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_open"
        android:alphabeticShortcut="o"
        android:icon="@drawable/ic_menu_open"
        android:title="@string/open"/>

    <group android:id="@+id/GAME_MENU" >
        <item
            android:id="@+id/menu_load_state"
            android:alphabeticShortcut="l"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/load_state"
            android:showAsAction="ifRoom"/>
        <item
            android:id="@+id/menu_save_state"
            android:alphabeticShortcut="t"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/save_state"
            android:showAsAction="ifRoom"/>
    </group>

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"/>

    <group android:id="@+id/GAME_MENU" >
        <item
            android:id="@+id/menu_reset"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/reset"/>
        <item
            android:id="@+id/menu_close"
            android:title="@string/close"/>
    </group>

    <item
        android:id="@+id/menu_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/quit"/>

</menu>